Actualizacion de proyecto

--- a/Informe.ipynb
+++ b/Informe.ipynb
@@ -185,14 +185,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analisis de calidad"
+    "# Analisis de calidad"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En el siguiente analisis de calidad podemos observar, un analisis general del archivo y otros graficos individuales de las columnas con mayor problema en su calidad.\n",
+    "En los siguientes analisis de calidad podemos observar, un analisis general del archivo y otros graficos individuales de las columnas con mayor problema en su calidad.\n",
     "\n"
    ]
   },
@@ -201,25 +201,30 @@
    "metadata": {},
    "source": [
     "#### Compra\n",
-    "\n",
+    "En el grafico general podemos ver un porcentaje muy bajo de outliers y valores faltantes, en los graficos individuales observamos que los outliers se producen en la columna de cantidad y los valores faltantes en la columna precio.\n",
     "##### Grafico general\n",
     "\n",
-    "<img src=\"Graficos/CompraGeneral.png\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/CompraGeneral.png?raw=true\" width=\"500\"/>\n",
     "\n",
     "- Porcentaje de valores faltantes en la tabla Compra es : 0.36 %\n",
     "- Porcentaje de outliers en la tabla Compra es : 0.17 %\n",
     "- Porcentaje de valores sin error en la tabla Compra es : 99.47 %\n",
     "\n",
+    "##### Grafico individual\n",
     "\n",
-    "Porcentaje de valores faltantes en la columna Cantidad es : 0.0 %\n",
-    "Porcentaje de outliers en la columna Cantidad es : 1.55 %\n",
-    "Porcentaje de valores sin error en la columna Cantidad es : 98.45 %\n",
-    "---------------------------------------------------\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/CompraCantidadInd.png?raw=true\" width=\"500\"/>\n",
     "\n",
-    "Porcentaje de valores faltantes en la columna Precio es : 3.18 %\n",
-    "Porcentaje de outliers en la columna Precio es : 0 %\n",
-    "Porcentaje de valores sin error en la columna Precio es : 96.82 %\n",
-    "---------------------------------------------------\n"
+    "- Porcentaje de valores faltantes en la columna Cantidad es : 0.0 %\n",
+    "- Porcentaje de outliers en la columna Cantidad es : 1.55 %\n",
+    "- Porcentaje de valores sin error en la columna Cantidad es : 98.45 %\n",
+    "\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/CompraPrecioInd.png?raw=true\" width=\"500\"/>\n",
+    "\n",
+    "- Porcentaje de valores faltantes en la columna Precio es : 3.18 %\n",
+    "- Porcentaje de outliers en la columna Precio es : 0 %\n",
+    "- Porcentaje de valores sin error en la columna Precio es : 96.82 %\n",
+    "\n",
+    "--------------------------------------------------------------------------"
    ]
   },
   {
@@ -227,27 +232,30 @@
    "metadata": {},
    "source": [
     "#### Venta\n",
-    "\n",
+    "En el grafico general podemos ver un porcentaje muy bajo de outliers y valores faltantes, en los graficos individuales observamos que los valores faltantes y outliers se generan en la columna cantidad y precio, pero sigue siendo un porcentaje muy bajo.\n",
     "##### Grafico general\n",
     "\n",
-    "<img src=\"Graficos/VentaGeneral.png\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/VentaGeneral.png?raw=true\" width=\"500\"/>\n",
     "\n",
     "- Porcentaje de valores faltantes en la tabla Venta es : 0.4 %\n",
     "- Porcentaje de outliers en la tabla Venta es : 0.15 %\n",
     "- Porcentaje de valores sin error en la tabla Venta es : 99.45 %\n",
     "\n",
+    "##### Grafico individual\n",
     "\n",
-    "Porcentaje de valores faltantes en la columna Precio es : 1.99 %\n",
-    "Porcentaje de outliers en la columna Precio es : 0 %\n",
-    "Porcentaje de valores sin error en la columna Precio es : 98.01 %\n",
-    "---------------------------------------------------\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/VentaPrecioInd.png?raw=true\" width=\"500\"/>\n",
     "\n",
+    "- Porcentaje de valores faltantes en la columna Precio es : 1.99 %\n",
+    "- Porcentaje de outliers en la columna Precio es : 0 %\n",
+    "- Porcentaje de valores sin error en la columna Precio es : 98.01 %\n",
     "\n",
-    "Porcentaje de valores faltantes en la columna Cantidad es : 1.91 %\n",
-    "Porcentaje de outliers en la columna Cantidad es : 1.5 %\n",
-    "Porcentaje de valores sin error en la columna Cantidad es : 96.59 %\n",
-    "---------------------------------------------------\n",
-    "\n"
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/VentaCantidadInd.png?raw=true\" width=\"500\"/>\n",
+    "\n",
+    "- Porcentaje de valores faltantes en la columna Cantidad es : 1.91 %\n",
+    "- Porcentaje de outliers en la columna Cantidad es : 1.5 %\n",
+    "- Porcentaje de valores sin error en la columna Cantidad es : 96.59 %\n",
+    "\n",
+    "----------------------------------------------------------------------------------------------\n"
    ]
   },
   {
@@ -255,54 +263,65 @@
    "metadata": {},
    "source": [
     "#### Cliente\n",
+    "En el grafico general podemos ver un porcentaje muy bajo de outliers y valores faltantes, sin tener en cuenta la columna col10. En los graficos individuales observamos que la columna col10 esta totalmente vacia, y que en las columnas Y,X,Telefono,Localidad,Domicilio,Provincia y Nombre_y_Apellido tienen valores faltantes y outliers, pero ninguno suficiente grande para preocuparnos\n",
     "\n",
-    "#### Grafico general\n",
-    "\n",
-    "<img src=\"Graficos/ClientesGeneral.png\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/ClientesGeneral.png?raw=true\" width=\"500\"/>\n",
     "\n",
     "- Porcentaje de valores faltantes en la tabla Clientes es : 1.1 %\n",
     "- Porcentaje de outliers en la tabla Clientes es : 0.37 %\n",
     "- Porcentaje de valores sin error en la tabla Clientes es : 98.53 %\n",
     "\n",
-    "Porcentaje de valores faltantes en la columna col10 es : 100.0 %\n",
-    "Porcentaje de outliers en la columna col10 es : 0.0 %\n",
-    "Porcentaje de valores sin error en la columna col10 es : 0.0 %\n",
-    "---------------------------------------------------\n",
+    "##### Grafico individual\n",
     "\n",
-    "Porcentaje de valores faltantes en la columna Y es : 2.02 %\n",
-    "Porcentaje de outliers en la columna Y es : 1.65 %\n",
-    "Porcentaje de valores sin error en la columna Y es : 96.33 %\n",
-    "---------------------------------------------------\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/ClienteCol10Ind.png?raw=true\" width=\"500\"/>\n",
     "\n",
-    "Porcentaje de valores faltantes en la columna X es : 2.1 %\n",
-    "Porcentaje de outliers en la columna X es : 1.65 %\n",
-    "Porcentaje de valores sin error en la columna X es : 96.25 %\n",
-    "---------------------------------------------------\n",
+    "- Porcentaje de valores faltantes en la columna col10 es : 100.0 %\n",
+    "- Porcentaje de outliers en la columna col10 es : 0.0 %\n",
+    "- Porcentaje de valores sin error en la columna col10 es : 0.0 %\n",
     "\n",
-    "Porcentaje de valores faltantes en la columna Telefono es : 1.31 %\n",
-    "Porcentaje de outliers en la columna Telefono es : 0 %\n",
-    "Porcentaje de valores sin error en la columna Telefono es : 98.69 %\n",
-    "---------------------------------------------------\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/ClienteYInd.png?raw=true\" width=\"500\"/>\n",
     "\n",
-    "Porcentaje de valores faltantes en la columna Localidad es : 0.94 %\n",
-    "Porcentaje de outliers en la columna Localidad es : 0 %\n",
-    "Porcentaje de valores sin error en la columna Localidad es : 99.06 %\n",
-    "---------------------------------------------------\n",
+    "- Porcentaje de valores faltantes en la columna Y es : 2.02 %\n",
+    "- Porcentaje de outliers en la columna Y es : 1.65 %\n",
+    "- Porcentaje de valores sin error en la columna Y es : 96.33 %\n",
+    "- \n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/ClienteXInd.png?raw=true\" width=\"500\"/>\n",
     "\n",
-    "Porcentaje de valores faltantes en la columna Domicilio es : 1.57 %\n",
-    "Porcentaje de outliers en la columna Domicilio es : 0 %\n",
-    "Porcentaje de valores sin error en la columna Domicilio es : 98.43 %\n",
-    "---------------------------------------------------\n",
+    "- Porcentaje de valores faltantes en la columna X es : 2.1 %\n",
+    "- Porcentaje de outliers en la columna X es : 1.65 %\n",
+    "- Porcentaje de valores sin error en la columna X es : 96.25 %\n",
     "\n",
-    "Porcentaje de valores faltantes en la columna Nombre_y_Apellido es : 0.9 %\n",
-    "Porcentaje de outliers en la columna Nombre_y_Apellido es : 0 %\n",
-    "Porcentaje de valores sin error en la columna Nombre_y_Apellido es : 99.1 %\n",
-    "---------------------------------------------------\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/ClienteTelefonoInd.png?raw=true\" width=\"500\"/>\n",
     "\n",
-    "Porcentaje de valores faltantes en la columna Provincia es : 0.94 %\n",
-    "Porcentaje de outliers en la columna Provincia es : 0 %\n",
-    "Porcentaje de valores sin error en la columna Provincia es : 99.06 %\n",
-    "---------------------------------------------------\n"
+    "- Porcentaje de valores faltantes en la columna Telefono es : 1.31 %\n",
+    "- Porcentaje de outliers en la columna Telefono es : 0 %\n",
+    "- Porcentaje de valores sin error en la columna Telefono es : 98.69 %\n",
+    "\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/ClienteLocalidadInd.png?raw=true\" width=\"500\"/>\n",
+    "\n",
+    "- Porcentaje de valores faltantes en la columna Localidad es : 0.94 %\n",
+    "- Porcentaje de outliers en la columna Localidad es : 0 %\n",
+    "- Porcentaje de valores sin error en la columna Localidad es : 99.06 %\n",
+    "\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/ClienteDomicilioInd.png?raw=true\" width=\"500\"/>\n",
+    "\n",
+    "- Porcentaje de valores faltantes en la columna Domicilio es : 1.57 %\n",
+    "- Porcentaje de outliers en la columna Domicilio es : 0 %\n",
+    "- Porcentaje de valores sin error en la columna Domicilio es : 98.43 %\n",
+    "\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/ClienteNombreApellidoInd.png?raw=true\" width=\"500\"/>\n",
+    "\n",
+    "- Porcentaje de valores faltantes en la columna Nombre_y_Apellido es : 0.9 %\n",
+    "- Porcentaje de outliers en la columna Nombre_y_Apellido es : 0 %\n",
+    "- Porcentaje de valores sin error en la columna Nombre_y_Apellido es : 99.1 %\n",
+    "\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/ClienteProvinciaInd.png?raw=true\" width=\"500\"/>\n",
+    "\n",
+    "- Porcentaje de valores faltantes en la columna Provincia es : 0.94 %\n",
+    "- Porcentaje de outliers en la columna Provincia es : 0 %\n",
+    "- Porcentaje de valores sin error en la columna Provincia es : 99.06 %\n",
+    "\n",
+    "---------------------------------------------------------------------------"
    ]
   },
   {
@@ -310,15 +329,16 @@
    "metadata": {},
    "source": [
     "#### Canal de venta\n",
-    "\n",
+    "En el grafico general podemos observar que no hay valores faltantes y tampoco outliers\n",
     "##### Grafico general\n",
     "\n",
-    "<img src=\"Graficos/CanalDeVentaGeneral.png\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/CanalDeVentaGeneral.png?raw=true\" width=\"500\"/>\n",
     "\n",
     "- Porcentaje de valores faltantes en la tabla Canal de venta es : 0.0 %\n",
     "- Porcentaje de outliers en la tabla Canal de venta es : 0.0 %\n",
     "- Porcentaje de valores sin error en la tabla Canal de venta es : 100.0 %\n",
-    "\n"
+    "\n",
+    "---------------------------------------------------------------------------------------\n"
    ]
   },
   {
@@ -326,15 +346,16 @@
    "metadata": {},
    "source": [
     "#### Gasto\n",
-    "\n",
+    "En el grafico general podemos observar que no hay valores faltantes y tampoco outliers\n",
     "##### Grafico general\n",
     "\n",
-    "<img src=\"Graficos/GastoGeneral.png\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/GastoGeneral.png?raw=true\" width=\"500\"/>\n",
     "\n",
     "- Porcentaje de valores faltantes en la tabla Gasto es : 0.0 %\n",
     "- Porcentaje de outliers en la tabla Gasto es : 0.0 %\n",
     "- Porcentaje de valores sin error en la tabla Gasto es : 100.0 %\n",
-    "\n"
+    "\n",
+    "------------------------------------------------------------------------------------------"
    ]
   },
   {
@@ -342,14 +363,24 @@
    "metadata": {},
    "source": [
     "#### Proveedor\n",
-    "\n",
+    "En el grafico general podemos ver un porcentaje muy bajo de valores faltantes. En el grafico individual podemos observar un porcentaje bastante alto de valores faltantes en la columna nombre\n",
     "##### Grafico general\n",
     "\n",
-    "<img src=\"Graficos/ProveedorGeneral.png\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/ProveedorGeneral.png?raw=true\" width=\"500\"/>\n",
     "\n",
     "- Porcentaje de valores faltantes en la tabla Proveedores es : 2.38 %\n",
     "- Porcentaje de outliers en la tabla Proveedores es : 0.0 %\n",
-    "- Porcentaje de valores sin error en la tabla Proveedores es : 97.62 %\n"
+    "- Porcentaje de valores sin error en la tabla Proveedores es : 97.62 %\n",
+    "\n",
+    "##### Grafico individual\n",
+    "\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/ProveedoresNombreInd.png?raw=true\" width=\"500\"/>\n",
+    "\n",
+    "- Porcentaje de valores faltantes en la columna Nombre es : 14.29 %\n",
+    "- Porcentaje de outliers en la columna Nombre es : 0 %\n",
+    "- Porcentaje de valores sin error en la columna Nombre es : 85.71 %\n",
+    "\n",
+    "-------------------------------------------------------------------------"
    ]
   },
   {
@@ -357,15 +388,16 @@
    "metadata": {},
    "source": [
     "#### Sucursal\n",
-    "\n",
+    "En el grafico general podemos ver un porcentaje muy bajo de outliers\n",
     "##### Grafico general\n",
     "\n",
-    "<img src=\"Graficos/SucursalesGeneral.png\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/SucursalesGeneral.png?raw=true\" width=\"500\"/>\n",
     "\n",
     "- Porcentaje de valores faltantes en la tabla Sucursales es : 0.0 %\n",
     "- Porcentaje de outliers en la tabla Sucursales es : 0.46 %\n",
     "- Porcentaje de valores sin error en la tabla Sucursales es : 99.54 %\n",
-    "\n"
+    "\n",
+    "------------------------------------------------------------------------------------\n"
    ]
   },
   {
@@ -373,14 +405,25 @@
    "metadata": {},
    "source": [
     "#### Tipo gasto\n",
-    "\n",
+    "En el grafico general podemos observar que no hay valores faltantes ni outliers\n",
     "##### Grafico general\n",
     "\n",
-    "<img src=\"Graficos/TipoGastoGeneral.png\" width=\"500\"/>\n",
+    "<img src=\"https://github.com/GonzaloPietraroia/DS-PI-ProyectoIndividual/blob/main/Graficos/TipoGastoGeneral.png?raw=true\" width=\"500\"/>\n",
     "\n",
     "- Porcentaje de valores faltantes en la tabla Tipo de Gasto es : 0.0 %\n",
     "- Porcentaje de outliers en la tabla Tipo de Gasto es : 0.0 %\n",
-    "- Porcentaje de valores sin error en la tabla Tipo de Gasto es : 100.0 %\n"
+    "- Porcentaje de valores sin error en la tabla Tipo de Gasto es : 100.0 %\n",
+    "\n",
+    "----------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "Los datos en general estan bien, se recomienda borrar las columnas que esten totalmente vacias, y las columnas con valores faltantes y outliers muy chicos se recomienda eliminarlos o remplazarlos con valores que no afecten mucho el promedio. Ademas en el analisis nos dimos cuenta que muchos nombres en las columnas tienen que ser modificados para tener una relacion con otras tablas."
    ]
   }
  ],
